# farialimer

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: faria-limer-tests.yaml  publish-to-pypi.yml  publish-to-test-pypi.yml
farialimer/: __init__.py  parser.py  utils.py
farialimer/parser/: b3.py  b3parser.py  basic_parser.py  models.py  santander.py
farialimer/parser/itau/: base_itau.py  cobranca.py
farialimer/parser/santander/: base_santander.py  pagamento_fornecedores.py
farialimer/providers/b3/documents/imbarq014/: imbarq014.yaml
farialimer/specs/b3/: imbarq001.yaml  imbarq002.yaml  imbarq004.yaml  imbarq006.yaml  imbarq007.yaml  imbarq008.yaml  imbarq009.yaml  imbarq011.yaml  imbarq012.yaml  imbarq013.yaml  imbarq014.yaml
farialimer/specs/b3/imbarq014/layouts/: __init__.py  (+3 more)
farialimer/specs/itau/: cobranca_240.yaml  cobranca_400.yaml
farialimer/specs/santander/: cobranca.yaml  folha_pagamento.yaml  pagamento_fornecedores.yaml
farialimer/utils/: converters.py  math_ops.py  raise_exceptions.py
tests/: helpers.py  test_b3parser.py  test_layout.py  test_parser.py  test_utils.py
tests/parser/: test_b3_layout.py  test_basic_parser.py  test_parser.py  test_specs.py
tests/parser/b3/: test_b3_parser.py  test_imbarq014.py  test_parser.py
tests/parser/itau/: test_cobranca.py
tests/parser/santander/: test_base_santander.py  test_pagamento_fornecedores.py  test_santander_parser.py
tests/utils/: test_raise_exceptions.py  test_utils.py
(+13 files in other folders)
